fixed alignment

--- a/portfolio/src/app/components/dashboard/dashboard.component.scss
+++ b/portfolio/src/app/components/dashboard/dashboard.component.scss
@@ -49,12 +49,6 @@
       display: flex;
       justify-content: center;
     }
-
-    .content {
-      display: flex;
-      justify-content: center;
-      margin-top: 20px;
-    }
   }
 }
 
@@ -103,11 +97,5 @@
   background-color: var(--bgColor3);
   display: flex;
   justify-content: center;
-}
-
-.content {
-  display: flex;
-  justify-content: center;
-  margin-top: 200px;
 }
 
