--- a/portfolio/src/app/components/florian/florian.component.scss
+++ b/portfolio/src/app/components/florian/florian.component.scss
@@ -1,4 +1,5 @@
 :host {
+    color: white;
 
     /* Variablen */
     --bildNichtSpiegelverkehrt: scaleX(1);
